--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "Bewerbungsunterlagen — Dein Name",
-  "short_name": "Bewerbung",
+  "name": "Vitalijs Ivanovs Praktikum",
+  "short_name": "Praktikum",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0b0d12",
   "theme_color": "#7fc8ff",
   "icons": [
-    { "src": "assets/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "assets/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "assets/favicon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "assets/favicon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
