Update index, styles and script

--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0b0d12",
-  "theme_color": "#7fc8ff",
+  "theme_color": "#0aa1a7",
   "icons": [
-    { "src": "assets/favicon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "assets/favicon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "assets/android-chrome-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "assets/android-chrome-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
