--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "background_color": "#0b0d12",
   "theme_color": "#0aa1a7",
   "icons": [
-    { "src": "assets/android-chrome-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "assets/android-chrome-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "assets/android-chrome-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
+    { "src": "assets/android-chrome-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any" },
+    { "src": "assets/maskable-512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
   ]
 }
